Fix: NSWindow